# Triphic

./: LICENSE  README
docs/: loob.html  plurality.html  points_and_smarts_files.html  triphic.html
src/: AtomSphere.H  AtomSphere.cc  BasePPhoreSite.H  BasePPhoreSite.cc  ByteSwapper.H  CMakeLists.txt  Combinator.H  Combinator.cc  DefaultPointsDefs.H  DiamondOverlay.H  DiamondOverlay.cc  FileExceptions.H  FingerprintBase.H  FingerprintBase.cc  HashedFingerprint.H  HashedFingerprint.cc  LoobSettings.H  LoobSettings.cc  MOEPointsDefs.H  MagicInts.H  NotHashedFingerprint.H  NotHashedFingerprint.cc  OverlayScore.H  OverlayScore.cc  OverlayTrans.H  OverlayTrans.cc  PPhoreQuery.H  PPhoreQuery.cc  ParseSMARTSXML.H  ParseSMARTSXML.cc  PharmPoint.H  PharmPoint.cc  PharmPointPVM.H  PharmPointPVM.cc  PluralityHit.H  PluralityHit.cc  PluralitySettings.H  PluralitySettings.cc  SMARTSExceptions.H  ShapeTanimoto.H  (+59 more)
src/build_utils/CMakeModules/: FindMyBoost.cmake  FindOEToolkits.cmake  FindPVM.cmake
test_dir/: 2Q61_lig_1.mol2  TEST.points  chembl_20_first_100_ions_and_tauts.smi  second_test.pphore  test.smt  test_loob.csh  test_moe.ph4  test_moe_vol.ph4  test_plurality.csh  test_triphic.csh  test_triphic_par.csh
